<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sheepshead Scorepad</string>
    <string name="history">History</string>
    <string name="email">E-mail</string>
    <string name="help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="add_player">Add Player</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Game Settings</string>
    <string name="languageSetting">Language Settings</string>
    <string name="colorSettings">Color Settings</string>
    <string name="picker">Picker</string>
    <string name="partner">Partner</string>
    <string name="player">Player</string>
    <string name="lost">Lost</string>
    <string name="wonNoSchneid">Won No Schneid</string>
    <string name="wonNoTrick">Won No Trick</string>
    <string name="lostNoSchneid">Lost No Schneid</string>
    <string name="LostNoTrick">Lost No Trick</string>
    <string name="pickerLost">Picker/Lost</string>
    <string name="partnerLost">Partner/Lost</string>
    <string name="playerLost">Player/Lost</string>
    <string name="won">Won</string>
    <string name="no_schneid">No Schneid</string>
    <string name="no_trick">No Trick</string>
    <string name="sittingOut">Sitting Out</string>
    <string name="leaster">Leaster</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="spaces">"       "</string>
    <string name="scoring">Scoring:</string>
    <string name="scoreHand">Score</string>
    <string name="saveNote">Save Notes</string>
    <string name="unlockHand">Unlock Hand</string>
    <string name="double_on_bump">Double on the Bump?</string>
    <string name="double_limit">Double Limit:</string>
    <string name="default_email">Default E-Mail Addresses?</string>
    <string name="penalty_label">Penalty Markers</string>
    <string name="note_label">Notes</string>

    <string-array name="NameMenuItems">
        <item>Remove Player</item>
        <item>Add Penalty</item>
        <item>Subtract Penalty</item>
    </string-array>

    <string name="add_doubler">x1</string>
    <string name="handKey">handKey</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="emailSetting">E-Mail Settings:</string>
    <string name="removedpenalty">Removed Penalty</string>
    <string name="addedpenalty">Added Penalty</string>
    <string name="playerremoved">Player Removed</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_activity_help">Help</string>
    <string name="add_player_click_here">Add Player: Click Here...</string>
    <string name="new_game_click_here">New Game: Click Here...</string>
    <string name="set_player_picker_and_partner">Set Player, Picker and Partner:</string>
    <string name="the_grey_boxes_">The grey boxes under each player for a given game indicate that player is not playing in that game. To indicate a Player, press the box for a player until the box turns blue. To indicate the Picker, choose green. To indicate Partner, select yellow.</string>
    <string name="close">Close</string>
    <string name="AddNote">Add a note for player</string>
    <string name="setNote">Click on the black box at the very bottom of the screen in a player\'s column to add a note.  Be brief, there is not much space.</string>
    <string name="unlockHandDetail">If a mistake was made, press the Unlock Hand button, correct the score, and press Score.  This change will NOT cascade to the rest of the hands.  Each hand in turn must be corrected.</string>


</resources>